# internal/web/router.go
@@ -95,6 +95,7 @@ func (s *Server) NewAPIRouter() chi.Router {
 	r.Get("/", handleAPIRoot(b))
 	r.Get("/version", handleVersion(b, s.ReadOnly))
 	r.Get("/openapi.yaml", handleOpenAPISpec())
+	r.Get("/sessions", handleHALClientSessions(b, s.Manager, s.ClientSessions))
 	r.Get("/archived", handleHALArchived(b, s.Manager))
 	r.Post("/archived/{id}/restore", handleHALArchivedRestore(b, s.Manager))
 	r.Delete("/archived/{id}", handleHALArchivedPurge(s.Manager))
